p- (0.8pre) UNRELEASED; urgency=low

  * new: added p-changelog

 -- Luc Pionchon <pionchon.luc@gmail.com>  Wed, 19 Jun 2013 14:45:48 +0300

p- (0.7) unstable; urgency=high

  * fix: don't echo anything. (it is displayed by each new shell...)
         --> urgency=high

 -- Luc Pionchon <pionchon.luc@gmail.com>  Sun, 16 Jun 2013 17:24:17 +0300

p- (0.6) unstable; urgency=low

  * new: bash completion for package names
  * fix: locale-purge bin is named localepurge (no dash)

 -- Luc Pionchon <pionchon.luc@gmail.com>  Sun, 16 Jun 2013 09:09:29 +0300

p- (0.5) unstable; urgency=high

  * new: Makefile, add 'dist:' and 'deb-package' targets to ease pkg creation.
  * new: Makefile, install p-package-manager.sh in /etc/bash_completion.d
         so p- actually work in interactive shells --> urgency=high

         NOTE: this is a hack, it is the only place I found that interactive shells source.
         I asked here:
         - http://unix.stackexchange.com/questions/77746                       (Q, stackexchange)
         - https://answers.launchpad.net/ubuntu/+source/bash/+question/229895  (Q, ubuntu)
         - https://bugs.launchpad.net/ubuntu/+source/bash/+bug/1186284         (bug report, ubuntu, bash)
  * deb: updated debian/dirs with etc/bash_completion.d instead of etc/profile.d/
  * fix: p-version: escape grep from possible alias.

 -- Luc Pionchon <pionchon.luc@gmail.com>  Sun, 02 Jun 2013 11:37:18 +0300

p- (0.4) unstable; urgency=high

  * deb: only "recommends" localepurge
  * fix: escape grep/sed/column/less from possible alias.
  * fix: don't put the DESTDIR inside p-help grep. --> urgency=high

 -- Luc Pionchon <pionchon.luc@gmail.com>  Fri, 31 May 2013 06:56:37 +0300

p- (0.3) unstable; urgency=high

  * fix: use correct function names (no '-'); fail login! --> urgency=high

 -- Luc Pionchon <pionchon.luc@gmail.com>  Tue, 28 May 2013 18:06:49 +0300

p- (0.2) unstable; urgency=low

  * fix: p-install-deb requires sudo